data/derived/comb/progs/unify/prog5602.ml.out
Characters 156-160:
  let seen' = if (List.mem h seen) = true then seen else h@seen in
                                                           ^^^^
Error: This expression has type 'a list list
       but an expression was expected of type 'a list
       The type variable 'a occurs inside 'a list
